# Cultivation

./: .gitignore  README.md  bot.py  pyproject.toml  requirements.txt
plugins/nonebot_plugin_myGame/: __init__.py  api.py  botConnection.py  consts.py  data.py  handler.py  person.py  scheduler.py
plugins/nonebot_plugin_myGame/Person/: person.py  state.py  task.py
